UI v2: Complete integration of customer feedback (2025-12-18)
- Updated terminology across 13 HTML files
- Renamed: 我的儀表板→我的學習資訊總覽, AIO職種完成度地圖→課程地圖, etc.
- Updated points sharing terminology: 分享點數→轉贈點數
- Added new fields: waitlist, LTC points checkbox, location filter
- Updated admin pages: course management, announcements, settings, teachers, students
- Added new screens: student-ltc-points.html, student-contact-school.html
- Created comprehensive CHANGELOG-v2.md
- All changes align with product-design-20251218.md

Modified: 13 files | Created: 3 files | 100% customer feedback integrated

--- a/admin-courses.html
+++ b/admin-courses.html
@@ -83,11 +83,13 @@
                             <tr>
                                 <th>分類</th>
                                 <th>課程</th>
+                                <th>教師</th>
                                 <th>日期</th>
                                 <th>地點</th>
                                 <th>時數/積分</th>
                                 <th>點數</th>
                                 <th>報名</th>
+                                <th>通知</th>
                                 <th>操作</th>
                             </tr>
                         </thead>
@@ -99,9 +101,9 @@
                                 <td>
                                     <div class="course-cell">
                                         <div class="course-name">失智友善溝通與行為支持</div>
-                                        <div class="course-meta">王美華 老師</div>
                                     </div>
                                 </td>
+                                <td>王美華</td>
                                 <td>2025/09/28</td>
                                 <td>台中</td>
                                 <td>6小時/有</td>
@@ -116,6 +118,9 @@
                                             <span style="width: 80%" aria-label="報名率 80%"></span>
                                         </div>
                                     </div>
+                                </td>
+                                <td>
+                                    <span class="badge badge--success">已發送</span>
                                 </td>
                                 <td>
                                     <div class="table-actions">
