--- a/admin-students.html
+++ b/admin-students.html
@@ -165,6 +165,7 @@
                                     <div class="table-actions">
                                         <button type="button" class="btn btn--small" onclick="viewStudentHistory('S001234')">查看歷程</button>
                                         <button type="button" class="btn btn--small btn--primary" onclick="openGiftPointsModal('王○○', 'S001234')">贈點</button>
+                                        <button type="button" class="btn btn--small btn--ghost" onclick="openExtendPointsModal('王○○', 'S001234')">延期點數</button>
                                     </div>
                                 </td>
                             </tr>
