--- a/courses.html
+++ b/courses.html
@@ -91,6 +91,16 @@
                             </select>
                         </div>
                         <div class="search-filters__field">
+                            <label for="location">上課地點</label>
+                            <select id="location">
+                                <option value="">不限</option>
+                                <option value="taipei">台北</option>
+                                <option value="taichung">台中</option>
+                                <option value="kaohsiung">高雄</option>
+                                <option value="online">線上</option>
+                            </select>
+                        </div>
+                        <div class="search-filters__field">
                             <button class="btn btn--primary" type="submit" aria-label="執行搜尋">
                                 🔍 搜尋
                             </button>
