--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <li role="none">
                     <a href="student-dashboard.html" class="header__menu-item" role="menuitem">學員中心</a>
                 </li>
+                <li role="none">
+                    <a href="admin-dashboard.html" class="header__menu-item" role="menuitem">校務管理</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -54,8 +57,8 @@
                 <div class="hero__container">
                     <div class="hero__content">
                         <span class="pill">ALL IN ONE 以人為本</span>
-                        <h1>打造跨專業長照人才<br>學習平台</h1>
-                        <p>課程地圖、實作機會、長照積分、師資群與學員儀表板，一站式完成。</p>
+                        <h1>ALL IN ONE<br>跨專業長照人才學習平台</h1>
+                        <p>培育人才Ｘ青銀共創Ｘ社會設計</p>
                         <div class="hero__actions">
                             <a class="btn btn--primary" href="courses.html" aria-label="瀏覽所有課程">查看課程</a>
                             <a class="btn btn--ghost" href="#about" aria-label="了解更多關於CFT">關於CFT</a>
