fix: Close critical gaps vs customer feedback (2025-12-18)
- Home: add announcements filter + course calendar widget (mock)
- Admin inquiries: add '新增溝通記錄' modal + modal helpers
- Admin students: implement '延期點數使用期限' modal + handlers
- Course detail: add waitlist explanation incl. queue number
- Admin course edit: add course media upload/link section
- Admin courses: add search form + notification management log section
- Student dashboard: add quick links to '聯絡照顧學校' and '長照積分管理'

--- a/admin-course-edit.html
+++ b/admin-course-edit.html
@@ -206,6 +206,35 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Course Assets (Customer Feedback 2025-12-18) -->
+                            <div class="credit-settings-panel" style="margin-top: var(--space-lg);">
+                                <h4 class="panel-title">🖼️ 課程照片與影片</h4>
+                                <div class="field">
+                                    <label for="course-media-photos">課程照片</label>
+                                    <input type="file" id="course-media-photos" accept="image/*" multiple>
+                                    <div class="field__help">可上傳多張照片（示意）。實作時限制：單檔 ≤ 20MB</div>
+                                </div>
+                                <div class="field">
+                                    <label for="course-media-video-upload">課程影片（上傳）</label>
+                                    <input type="file" id="course-media-video-upload" accept="video/*">
+                                    <div class="field__help">示意：直接上傳到會員系統（限制 20MB）</div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="field">
+                                        <label for="course-media-google">Google 連結</label>
+                                        <input type="url" id="course-media-google" placeholder="https://drive.google.com/...">
+                                    </div>
+                                    <div class="field">
+                                        <label for="course-media-youtube">YouTube 連結</label>
+                                        <input type="url" id="course-media-youtube" placeholder="https://youtu.be/...">
+                                    </div>
+                                </div>
+                                <div class="field">
+                                    <label for="course-media-caption">內容說明</label>
+                                    <textarea id="course-media-caption" rows="3" placeholder="可針對照片/影片補充活動內容說明"></textarea>
+                                </div>
+                            </div>
                             
                             <!-- Point Deduction Settings -->
                             <div class="point-deduction-panel">
