--- a/course-detail.html
+++ b/course-detail.html
@@ -278,6 +278,10 @@
                                 <span class="status-value">0 / 5</span>
                             </div>
                         </div>
+
+                        <div class="notice notice--info" style="margin-top: var(--space-md);">
+                            <strong>候補說明：</strong>若課程額滿，可報名候補名額，系統將顯示候補順序號碼（示意：候補第 2 號）。
+                        </div>
                         
                         <div class="registration-actions">
                             <button class="btn btn--primary" data-open="modal-register" aria-label="報名此課程">
