--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -161,6 +161,20 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Quick Links (Customer Feedback 2025-12-18) -->
+                <div class="card" style="margin-top: var(--space-lg);">
+                    <div style="display:flex;justify-content:space-between;align-items:center;">
+                        <h3 style="margin:0;">快捷功能</h3>
+                        <span class="badge badge--info">示意</span>
+                    </div>
+                    <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: var(--space-md); margin-top: var(--space-md);">
+                        <a class="btn btn--ghost" href="student-contact-school.html" aria-label="聯絡照顧學校">💬 聯絡照顧學校</a>
+                        <a class="btn btn--ghost" href="student-ltc-points.html" aria-label="長照積分管理">📜 長照積分管理</a>
+                        <a class="btn btn--ghost" href="student-profile.html" aria-label="我的學習資料夾">📁 我的學習資料夾</a>
+                    </div>
+                    <p class="meta" style="margin-top: var(--space-sm);">依客戶回饋新增入口：聯絡照顧學校、長照積分管理。</p>
+                </div>
             </div>
 
             <!-- Dashboard Content Grid -->
